# CapBench

./: .gitignore  README.md  environment.yml  pyproject.toml
CNN-Cap/: benchmark.py  density_map_dataset.py  infer.py  resnet_custom.py  train.py  train_utils.py
GNN/: __init__.py  benchmark.py  inference.py  lightning_module.py  main.py  train.py  train_lightning.py
PCT-Cap/: .gitignore  benchmark.py
capbench/: __init__.py  _legacy.py  cli.py  dataloaders.py  datasets.py  dev.py  paths.py  registry.py  visualize.py  window_density_dataset.py  window_id_map_dataset.py
common/: cap3d_fast_density.py  datasets.py  def_fast_density.py  native_extension_utils.py  tech_parser.py  window_splitting.py
datasets/: README.md
reference/: README.md
scripts/: analyze_coupling_comparison.py  analyze_dataset_statistics.py  analyze_layer_window_coverage.py  capacitance_comparison.py  convert_smic28_def_windows_to_cap3d_conformal.py  partition_cap3d_dataset.py  run_openrcx.py  run_preprocessing.sh  run_rwcap.py  setup_env.sh  window_metadata_generation.py
spef_tools/: openrcx_to_simple_spef.py  python_parser.py  raphael_to_spef.py  rwcap_to_spef.py
tech/: nangate45.layermap  nangate45.yaml
tests/: test_binary_mask_conductor_naming.py  test_density_window_bundles.py
tools/: __init__.py
viewers/: _common.py  viewer_cap3d.py  viewer_cap3d_cross_section.py  viewer_density_maps.py  viewer_graph.py  viewer_point_cloud.py
window_tools/: __init__.py  cap3d_cross_section.py  cap3d_generation.py  cap3d_mesh.py  cap3d_models.py  cap3d_parser.py  cap3d_partitioner.py  (+3 more)
(+215 files in other folders)
